--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Somos una empresa especializada en la producción y venta de hormigón elaborado de la zona norte de Buenos Aires, con miras a ampliarnos. Para esto, brindamos una gama de servicios que se distinguen por su calidad y profesionalidad.">
     <meta name="keywords" content="caran concretos, empresa hormigonera en buenos aires, empresa hormigonera, hormigon elaborado, suministro de hormigon, empresa de construccion en campana">
     <!--BS inicia-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--BS finaliza-->
@@ -48,22 +49,22 @@
     <!--columnas del home-->
     <main>
         <div class="home">
-            <div class="foto img1">
+            <div class="foto img1" data-aos="flip-left">
                 <a href="./pages/nosotros.html">
                     <h2>Quienes somos</h2>
                 </a>
             </div>
-            <div class="foto img2">
+            <div class="foto img2" data-aos="flip-left" data-aos-delay="100">
                 <a href="./pages/servicios.html">
                     <h2>Servicios</h2>
                 </a>
             </div>
-            <div class="foto img3">
+            <div class="foto img3" data-aos="flip-left" data-aos-delay="200">
                 <a href="./pages/clientes.html">
                     <h2>Clientes</h2>
                 </a>
             </div>
-            <div class="foto img4">
+            <div class="foto img4" data-aos="flip-left" data-aos-delay="300">
                 <a href="./pages/contacto.html">
                     <h2>Contactanos</h2>
                 </a>
@@ -102,6 +103,13 @@
         </div>
     </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
