--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros-Caran concretos</title>
-    <meta name="description" content="Somos un equipo de profesionales, apasionados y comprometidos con la producción de hormigón para la industria constructora. Siendo una empresa con pocos años en el rubro, nos posicionamos como principal proovedor de hormigón de nuestra zona.">
+    <meta name="description"
+        content="Somos un equipo de profesionales, apasionados y comprometidos con la producción de hormigón para la industria constructora. Siendo una empresa con pocos años en el rubro, nos posicionamos como principal proovedor de hormigón de nuestra zona.">
     <meta name="keywords" content="empresa hormigonera, empresa hormigonera en campana, hormigon elaborado,">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--BS inicia-->
@@ -23,7 +24,8 @@
                 <a class="navbar-brand" href="../index.html">
                     <img src="../multimedia/logo caran.png" alt="" class="img-navbar">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
@@ -46,15 +48,50 @@
         </nav>
     </header>
     <!--Nav bar finaliza-->
-    <div class="vw_truck">
+    <div class="about">
         <div class="us">
-            <p>Somos Caran Concretos, una empresa joven que busca consolidarse como principal proveedor de hormigón
-                elaborado de la zona. Esta idea nace 2 años atras, cuando nos dimos cuenta que nuestra ciudad necesitaba
-                una empresa hormigonera local, que pueda satisfacer las necesidades basicas en el ámbito de la
-                construcción. Para llevar a cabo esta misión, utilizamos herramientas de ultima tecnología, facilitando
-                las tareas de nuestros empleados, los cuales son profesionales y experimentados.</p>
+            <p>Somos Caran Concretos, una empresa joven que busca posicionarse como el principal proveedor de hormigón elaborado de zona norte en Buenos Aires. Este proyecto nace 4 años atras, cuando nos dimos cuenta que en nuestra ciudad hacía falta una empresa capaz de producir y entregar un material de alta calidad, brindando una atención al cliente personalizada. Para llegar a este resultado, contamos con herramientas de trabajo de última tecnología, las cuales son manejadas por un equipo de operarios profesional y capacitado.</p>
         </div>
-        <img src="" alt="">
+    </div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../multimedia/planta4.png" class="d-block w-100" alt="planta hormigonera">
+                <div class="carousel-caption d-none d-md-block">
+                    <p>Somos una empresa joven con un enfoque innovador en la industria constructora. Combinamos la experiencia técnica y el compromiso de ofrecer resultados sobresalientes.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../multimedia/descarga8.jpg" class="d-block w-100" alt="descarga de hormigón">
+                <div class="carousel-caption d-none d-md-block">
+                    <p>Estamos construyendo un futuro sólido, y cada proyecto que abordamos es una oportunidad para demostrar nuestra habilidad, pasión y profesionalidad.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="/multimedia/planta.jpg" class="d-block w-100" alt="planta en funcionamiento">
+                <div class="carousel-caption d-none d-md-block">
+                    <p>Creemos en desafiar las convenciones y abrazar las prácticas sostenibles. Estamos comprometidos con el crecimiento y el desarrollo sostenible de nuestra comunidad y la satisfacción de nuestros clientes.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
     <footer>
         <div class="container__footer">
