--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -64,19 +64,19 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/multimedia/planta4.jpg" class="d-block w-100" alt="planta hormigonera">
+                <img src="../multimedia/planta4.jpg" class="d-block w-100" alt="planta hormigonera">
                 <div class="carousel-caption d-none d-md-block">
                     <p>Somos una empresa joven con un enfoque innovador en la industria constructora. Combinamos la experiencia técnica y el compromiso de ofrecer resultados sobresalientes.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/multimedia/descarga8.jpg" class="d-block w-100" alt="descarga de hormigón">
+                <img src="../multimedia/descarga8.jpg" class="d-block w-100" alt="descarga de hormigón">
                 <div class="carousel-caption d-none d-md-block">
                     <p>Estamos construyendo un futuro sólido, y cada proyecto que abordamos es una oportunidad para demostrar nuestra habilidad, pasión y profesionalidad.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/multimedia/planta.jpg" class="d-block w-100" alt="planta en funcionamiento">
+                <img src="../multimedia/planta.jpg" class="d-block w-100" alt="planta en funcionamiento">
                 <div class="carousel-caption d-none d-md-block">
                     <p>Creemos en desafiar las convenciones y abrazar las prácticas sostenibles. Estamos comprometidos con el crecimiento y el desarrollo sostenible de nuestra comunidad y la satisfacción de nuestros clientes.</p>
                 </div>
