--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros-Caran concretos</title>
-    <meta name="description"
-        content="Somos un equipo de profesionales, apasionados y comprometidos con la producción de hormigón para la industria constructora. Siendo una empresa con pocos años en el rubro, nos posicionamos como principal proovedor de hormigón de nuestra zona.">
+    <meta name="description" content="Somos un equipo de profesionales, apasionados y comprometidos con la producción de hormigón para la industria constructora. Siendo una empresa con pocos años en el rubro, nos posicionamos como principal proovedor de hormigón de nuestra zona.">
     <meta name="keywords" content="empresa hormigonera, empresa hormigonera en campana, hormigon elaborado,">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--BS inicia-->
@@ -78,7 +77,7 @@
             <div class="carousel-item">
                 <img src="../multimedia/planta.jpg" class="d-block w-100" alt="planta en funcionamiento">
                 <div class="carousel-caption d-none d-md-block">
-                    <p>Creemos en desafiar las convenciones y abrazar las prácticas sostenibles. Estamos comprometidos con el crecimiento y el desarrollo sostenible de nuestra comunidad y la satisfacción de nuestros clientes.</p>
+                    <p>Creemos en desafiar las convenciones y abrazar las prácticas sostenibles. Estamos comprometidos con el crecimiento y el desarrollo sustentable de nuestra comunidad y la satisfacción de nuestros clientes.</p>
                 </div>
             </div>
         </div>
